<resources>
    <string name="app_name">SimplifyApp</string>

    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="powered_by">Powered by Mastercard</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_cover">CoverActivity</string>
    <string name="title_activity_store">StoreActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navlist_blurb">Store name Here</string>
    <string name="drawer_open">Opens Drawer</string>
    <string name="drawer_close">Closes drawer</string>

    <string name="action_settings">Settings</string>

    <string name="euro">€</string>
    <string name="dollar">$</string>
    <string name="pound">£</string>
    <string name="cancel">Cancel</string>
    <string name="use_password">Use password</string>
    <string name="sign_in">Sign in</string>
    <string name="ok">OK</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="password_description">Enter your store password to continue</string>
    <string name="purchase">Purchase</string>
    <string name="purchase_not_invalidated">Purchase not invalidated</string>
    <string name="purchase_button_not_invalidated_description">
        You can proceed to purchase with this button \n even if a new fingerprint is enrolled
    </string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">Purchase successful</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>
    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="description_bugdroid_icon">Android bugdroid image</string>
    <string name="description_fingerprint_icon">Fingerprint icon</string>
    <string name="email">Email</string>
    <string name="sale">Sale</string>
    <string name="refund">Refund</string>
    <string name="cvv">CVV</string>

    <string name="title_action_reset">Reset</string>

    <string name="label_card_number">XXXX XXXX XXXX XXXX</string>
    <string name="label_expired_date">MM/YY</string>
    <string name="label_card_holder">CARD HOLDER</string>
    <string name="label_cvv_code">CVV CODE</string>

    <string name="hint_card_number">16-DIGIT CARD NUMBER</string>
    <string name="hint_expired_date">EXPIRED DATE</string>
    <string name="hint_card_holder">CARD HOLDER</string>
    <string name="hint_cvv_code">CVV CODE</string>

    <string name="label_secure_submission">Secure Submission</string>


</resources>
