<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/shelves_blur"
    >

    <ImageView
        android:id="@+id/iv_simplify"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/app_name"
        android:src="@drawable/simplify_logo" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <com.mastercard.simplifyapp.widgets.SimplifyEditText
            android:id="@+id/et_username"
            style="@style/WhiteEdittextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <View
            android:id="@+id/view_username"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="3dp"
            android:background="@color/white" />

        <com.mastercard.simplifyapp.widgets.SimplifyEditText
            android:id="@+id/et_password"
            style="@style/WhiteEdittextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/view_password"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="3dp"
            android:background="@color/white"/>

    </LinearLayout>

    <com.mastercard.simplifyapp.widgets.SimplifyButton
        android:id="@+id/btn_login"
        style="@style/OrangeButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</RelativeLayout>
