<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.CardForm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@null">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:id="@+id/card_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:cardPreventCornerOverlap="false"
            android:alpha="0">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                android:background="@drawable/blue_gradient">

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/text_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="16sp"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_card_number"
                    android:textColor="@color/translucent_white" />

                <ImageView
                    android:id="@+id/icon_card_blue"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_help_translucent_24dp" />

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/text_expired_date"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/text_card_number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/text_cvv_code"
                    android:textSize="14sp"
                    android:fontFamily="monospace"
                    android:textColor="@color/translucent_white"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_expired_date" />

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/text_card_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_expired_date"
                    android:textSize="14sp"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="@string/label_card_holder" />

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/text_cvv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/text_expired_date"
                    app:layout_constraintBottom_toBottomOf="@+id/text_expired_date"
                    app:layout_constraintRight_toLeftOf="@+id/icon_help_blue"
                    android:textSize="14sp"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_cvv_code"
                    android:textColor="@color/translucent_white" />

                <ImageView
                    android:id="@+id/icon_help_blue"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/text_expired_date"
                    app:layout_constraintTop_toTopOf="@+id/text_expired_date" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginEnd="32dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="12dp"
            app:cardPreventCornerOverlap="false"
            android:alpha="1">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="24dp"
                android:background="@color/dark_gray">

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/label_card_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="16sp"
                    android:textColor="@color/light_gray"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_card_number" />

                <ImageView
                    android:id="@+id/nfc_prompt_gray"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/nfc_prompt" />

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/label_expired_date"
                    android:layout_width="99dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/label_card_number"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/label_cvv_code"
                    android:textSize="14sp"
                    android:textColor="@color/translucent_white"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_expired_date" />

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/label_card_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/label_expired_date"
                    android:textSize="14sp"
                    android:textColor="@color/translucent_white"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_card_holder" />

                <com.mastercard.simplifyapp.view.MonoTextView
                    android:id="@+id/label_cvv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toTopOf="@+id/label_expired_date"
                    app:layout_constraintBottom_toBottomOf="@+id/label_expired_date"
                    app:layout_constraintRight_toLeftOf="@+id/icon_help_gray"
                    android:textSize="14sp"
                    android:textColor="@color/translucent_white"
                    android:fontFamily="monospace"
                    android:typeface="monospace"
                    android:textAllCaps="true"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/label_cvv_code" />

                <ImageView
                    android:id="@+id/icon_help_gray"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="@+id/label_expired_date"
                    app:layout_constraintTop_toTopOf="@+id/label_expired_date" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <com.mastercard.simplifyapp.view.WrapContentHeightViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_gray"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_card_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_edit_card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:hint="@string/hint_card_number"
                    tools:text="4242 4242 4242 4242" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_expired_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_edit_expired_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="date"
                    android:imeOptions="actionNext"
                    android:hint="@string/hint_expired_date"
                    android:maxLength="5"
                    tools:text="12/19" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_cvv_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/input_edit_cvv_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:inputType="numberPassword"
                    android:imeOptions="actionDone"
                    android:hint="@string/hint_cvv_code"
                    android:maxLength="4"
                    tools:text="12/19" />

            </android.support.design.widget.TextInputLayout>

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.mastercard.simplifyapp.view.WrapContentHeightViewPager>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
